update backend - frontend

--- a/dataViz/marketPresence/static/css/darkblue.css
+++ b/dataViz/marketPresence/static/css/darkblue.css
@@ -902,13 +902,6 @@ Page Footer
 Boby
 ****/
 body {
-  background-color: #364150;
+  background-color: white;
 }
 
-/****
- CSS3 Spinner Bar
-****/
-.page-spinner-bar > div,
-.block-spinner-bar > div {
-  background: #20c5ad;
-}
