--- a/dataViz/marketPresence/templates/marketPresence/mappa.html
+++ b/dataViz/marketPresence/templates/marketPresence/mappa.html
@@ -50,12 +50,15 @@
 	<!-- END SIDEBAR -->
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
+		
 		<div  class="page-content">
 			
 			<h2 class="page-title">
 			Monitoraggio vendita televisori nel mercato web italiano
 			</h2>
 			<hr>
+
+			
 			<h3>Ricerca per</h3>
 
 			<table>
@@ -89,17 +92,18 @@
 			</tr>
 			</h4>
 		</table>
-		
+			<div class="row">
+			<div class="col-lg-4">
 		
 			<h3> Risultati:</h3>
 		<table style="border: 1px solid black;">
 		<tr style="padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #2b3643;
-    color:white;
-    border: 1px solid #white;
-    ">
+		    padding-bottom: 12px;
+		    text-align: left;
+		    background-color: #2b3643;
+		    color:white;
+		    border: 1px solid #white;
+		    ">
 		<th>date</th>
 		
 		<th>shop</th>
@@ -120,10 +124,23 @@
 
 
 		</div>
+				<div class="col-lg-3">
+
+					<h3> Dataviz:</h3>
 
 
-					
+					<div width="100%" id="myDiv">  </div>
+				
 				</div>
+		</div>
+
+			</div>
+
+
+			{{lista_giorno_dvb_t}}
+
+
+			</div>
 			</div></div>
 
 	
@@ -134,4 +151,45 @@
 
 
 
-</body></html>
+
+</body>
+<script>
+  var dvb_t = {
+  x: {{lista_giorno_dvb_t}},
+  y: {{lista_number_dvb_t}},
+  name: "dvb-t",
+  type: 'bar'
+};
+
+var dvb_t2 = {
+  x: {{lista_giorno_dvb_t}},
+  y: {{lista_number_dvb_t2}},
+  name: 'dvb-t2',
+  type: 'bar'
+};
+
+var dvb_t2_hevc = {
+  x: {{lista_giorno_dvb_t}},
+  y: {{lista_number_dvb_t2_hevc}},
+  name: 'dvb-t2-hevc',
+  type: 'bar'
+};
+
+var hevc = {
+  x: {{lista_giorno_dvb_t}},
+  y: {{lista_number_hevc}},
+  name: 'hevc',
+  type: 'bar'
+};
+
+
+
+var data = [dvb_t,dvb_t2,hevc,dvb_t2_hevc];
+
+var layout = {barmode: 'stack'};
+
+Plotly.newPlot('myDiv', data, layout);
+</script>
+
+
+</html>
