Aggiornamento mappa, urls

--- a/dataViz/marketPresence/templates/marketPresence/mappa.html
+++ b/dataViz/marketPresence/templates/marketPresence/mappa.html
@@ -54,7 +54,7 @@
 		<div  class="page-content">
 			
 			<h1 class="page-title">
-			Monitoraggio televisori su portali B2C - C2C 
+			Monitoraggio televisori disponibili su portali B2C - C2C 
 			</h1>
 			<h4> Chiave di ricerca:<b>
 				{% if keyword %}
